<resources>
    <string name="app_name">Secrect</string>
    <string name="user">用户名：</string>
    <string name="password">密  码：</string>
    <string name="Login">登 录</string>
    <string name="Publish_message">发表</string>
    <string name="Registered">注 册</string>
    <string name="phoneNumber">手机号：</string>
    <string name="email">邮  箱：</string>
    <string name="rePass">确认密码:</string>
</resources>
